Post-debugging. Screen navigation is now working properly. TODO: -Test "Search by Beer" screen path by providing Beer data. -Make the MapView actually work!! This includes adding overlays and clickable info boxes on highlighted venues. -Finish the Venue screen by adding a list of available beers. -Create the Beer screen that has information about a beer. -Implement the Beer Finder Web Service!

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,5 +32,7 @@
     <string name="map_results_label">Map Results</string>
     <string name="venue_label">Venue</string>
     <string name="todo">TODO</string>
+    <string name="working_spinner">Working...</string>
+    <string name="getting_current_zip">Getting current zip...</string>
 
 </resources>
